# NRE-Physic

./: CMakeLists.txt  README.md
src/: NRE_Main.cpp
src/Header/: NRE_Collideable.hpp  NRE_Collider.hpp  NRE_Physic.hpp  NRE_Physic2D.hpp
src/Physic/: NRE_Collideable.hpp
src/Physic/2D/Bounding/: NRE_AABB.hpp  NRE_AABB.tpp
src/Physic/2D/Shape/: NRE_Circle.hpp  NRE_Shape.hpp
src/Physic/Collideable/: NRE_Circle.hpp  NRE_Particle2D.hpp
src/Physic/Collider/: NRE_AbstractCollider.hpp  NRE_Collider.hpp  NRE_ColliderDetection.hpp
src/Physic/Collider/Core/: NRE_Circle.hpp  NRE_Particle2D.hpp
src/Utility/Interface/Collideable/: NRE_Collideable.hpp
